# boluotesthub

./: .env  .gitignore  CODE_REVIEW_REPORT.md  SECURITY_FIX.md  _apifox_dump.txt  _fix_dump.py  compose.override.yml  compose.yml  package-lock.json  test_output.txt
.dev/: pids.json
.trae/documents/: system-iteration-log.md  增强报告分析以提升提效（基于Apifox报告+知识沉淀）.md  完善日志系统与报告可视化分析规划.md  日志系统与报告分析（数据安全优先）计划.md  添加操作日志（审计日志）模块规划.md
.trae/skills/daily-worklog/: SKILL.md
.trae/skills/download-manager/: SKILL.md
.trae/skills/issue-tracker/: SKILL.md
.trae/skills/iteration-log/: SKILL.md
.trae/skills/post-task-check/: SKILL.md
.trae/skills/pre-startup-check/: SKILL.md
.trae/skills/process-manager/: SKILL.md
apifox-reports/: apifox-report-2026-02-10-17-37-16-939-0.json  apifox-report-2026-02-10-18-16-36-933-0.json  apifox-report-2026-02-24-22-31-34-238-0.json
backend/: .env.example  .gitignore  SCHEDULER_FIX_SUMMARY.md  check_all_reports.py  check_collection.py  check_mongodb.py  check_mysql.py  check_raw_report.py  check_report_detail.py  check_scenario_report.py  check_tasks.py  check_tasks_simple.py  clear_mongodb.py  debug_apifox_cli.py  last_report.json  output2.txt  pyproject.toml  start.bat  test_apifox_params.py  test_csv_fix.py  test_csv_import.py  test_dingtalk_token.py  test_execution.py  test_full_flow.py  test_mongodb.py  test_mongodb_basic.py  test_pandas2.py  test_pandas3.py  test_report_structure.py  test_report_verbose.json  test_scheduler_env.py  test_scheduler_fix.py  test_simple.py
backend/apifox-reports/: apifox-report-2026-02-10-17-34-04-508-0.json  apifox-report-2026-02-11-10-09-54-079-0.json  apifox-report-2026-02-11-10-13-14-023-0.json  apifox-report-2026-02-11-10-13-39-801-0.json
backend/apifox-reports-local/: apifox-report-2026-02-11-11-42-02-345-0.json
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/alembic/versions/: 1439c35dd6d0_add_projects_and_collections_tables.py  40b4b8762289_add_defect_table.py  6a8c2e77d9d1_add_audit_log_table.py  7881fb1235b0_update_execution_table.py  a1b2c3d4e5f6_change_report_json_to_longtext.py  c0f74d4a30db_add_scheduled_task_tables.py  d4e5f6a7b8c9_add_retry_timeout_fields.py  e607011cbe80_add_execution_record_table.py  e634d2aec366_add_notification_tables.py  e8f9a0b1c2d3_refactor_defect_table.py  f9a0b1c2d3e4_create_defect_import_records_table.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: audit_logs.py  defect_import.py  defects.py  items.py  login.py  notifications.py  scheduled_tasks.py  users.py  utils.py
backend/app/api/routes/executions/: __init__.py  routes.py
backend/app/api/routes/projects/: __init__.py  routes.py
backend/app/core/: config.py  db.py  logging.py  mongodb.py  security.py
backend/app/crud/: __init__.py  audit_log.py  defect.py  execution.py  item.py  notification.py  project.py  scheduled_task.py  user.py
backend/app/models/: __init__.py  audit_log.py  base.py  defect.py  defect_import.py  execution.py  item.py  notification.py  project.py  scheduled_task.py  user.py
backend/app/scripts/: audit_log_cleanup.py  devserver.py  diagnose_extract_from_file.py  diagnose_report_requests.py  report_backfill.py  report_verify.py  smoke_audit_logs.py  spawn_dev.py  stop_dev.py
backend/app/services/: apifox.py  audit_log.py  defect_import.py  mongodb_report.py  notification_service.py  notification_trigger.py  scheduler_service.py
backend/test-output/: apifox-report-2026-02-10-21-32-51-610-0.json
backend/test-reports/: apifox-report-2026-02-10-18-11-19-553-0.json
backend/tests/: conftest.py
backend/tests/api/routes/: test_audit_logs.py
docs/: system-functional-specification.md
docs/issues/: README.md  issues.md
docs/worklog/: 2026-02-16.md  2026-02-17.md  2026-02-19.md  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
(+31 files in other folders)
